--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "node": ">= 18"
   },
   "scripts": {
-    "watch": "lerna run watch --parallel",
-    "watch:core-common": "lerna run --scope @vendure/common --scope @vendure/core watch --parallel",
     "lint": "eslint --fix",
     "format": "prettier --write --html-whitespace-sensitivity ignore",
     "docs:generate-typescript-docs": "ts-node scripts/docs/generate-typescript-docs.ts",
@@ -15,17 +13,12 @@
     "docs:build": "npm run docs:generate-typescript-docs && npm run docs:generate-graphql-docs",
     "codegen": "tsc -p scripts/codegen/plugins && ts-node scripts/codegen/generate-graphql-types.ts",
     "version": "npm run check-imports && npm run check-angular-versions && npm run build && npm run check-core-type-defs && npm run generate-changelog && git add CHANGELOG* && git add */version.ts",
-    "dev-server:start": "cd packages/dev-server && npm run start",
-    "test": "lerna run test --stream --no-bail",
-    "e2e": "lerna run e2e --stream --no-bail",
-    "build": "lerna run build",
+    "dev-server:start": "cd packages/dev-server && pnpm start",
+    "build": "pnpm -r --filter='!@vendure/admin-ui' --filter='!@vendure/admin-ui-plugin' --filter='!@vendure/cli' --filter='!@vendure/elasticsearch-plugin' --filter='!@vendure/sentry-plugin' --filter='!@vendure/stellate-plugin' --filter='!@vendure/payments-plugin' --filter='!@vendure/testing' run build",
     "check-imports": "ts-node scripts/check-imports.ts",
     "check-core-type-defs": "ts-node scripts/check-core-type-defs.ts",
     "check-angular-versions": "ts-node scripts/check-angular-versions.ts",
-    "generate-changelog": "ts-node scripts/changelogs/generate-changelog.ts",
-    "publish-release": "lerna publish -m \"chore: Publish %s\" --no-push --force-publish",
-    "publish-prerelease": "lerna publish -m \"chore: Pre-release %s\" prerelease --exact --no-push --force-publish --preid next --dist-tag next",
-    "publish-local": "lerna version --force-publish --no-git-tag-version && cd scripts && ./publish-to-verdaccio.sh"
+    "generate-changelog": "ts-node scripts/changelogs/generate-changelog.ts"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.1.0",
@@ -47,7 +40,6 @@
     "graphql": "~16.9.0",
     "husky": "^4.3.0",
     "klaw-sync": "^6.0.0",
-    "lerna": "^8.1.2",
     "lint-staged": "^10.5.4",
     "prettier": "^3.2.5",
     "rollup": "^4.18.0",
@@ -66,36 +58,6 @@
     "@rollup/rollup-linux-x64-gnu": "^4.13.0",
     "@swc/core-linux-x64-gnu": "1.4.7"
   },
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ],
-    "nohoist": [
-      "**/@types/jasmine",
-      "**/@types/jasminewd2"
-    ]
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ],
-    "rules": {
-      "subject-case": [
-        2,
-        "always",
-        [
-          "sentence-case"
-        ]
-      ]
-    }
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
-      "post-commit": "git update-index --again",
-      "pre-commit": "NODE_OPTIONS=\"--max-old-space-size=8096\" lint-staged"
-    }
-  },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
@@ -104,5 +66,6 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsdoc": "^45.0.0",
     "eslint-plugin-prefer-arrow": "^1.2.3"
-  }
+  },
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
