--- a/packages/admin-ui-plugin/package.json
+++ b/packages/admin-ui-plugin/package.json
@@ -21,15 +21,19 @@
     "devDependencies": {
         "@types/express": "^4.17.21",
         "@types/fs-extra": "^11.0.4",
-        "@vendure/admin-ui": "^2.3.1",
-        "@vendure/common": "^2.3.1",
-        "@vendure/core": "^2.3.1",
+        "@vendure/admin-ui": "workspace:*",
+        "@vendure/common": "workspace:*",
+        "@vendure/core": "workspace:*",
         "express": "^4.18.3",
         "rimraf": "^5.0.5",
         "typescript": "5.4.2"
     },
     "dependencies": {
+        "@nestjs/common": "~10.3.10",
+        "@nestjs/graphql": "~12.2.0",
         "date-fns": "^2.30.0",
-        "fs-extra": "^11.2.0"
+        "fs-extra": "^11.2.0",
+        "graphql": "~16.9.0",
+        "graphql-tag": "^2.12.6"
     }
 }
