--- a/packages/admin-ui/package.json
+++ b/packages/admin-ui/package.json
@@ -29,6 +29,7 @@
         }
     },
     "dependencies": {
+        "@vendure/common": "workspace:*",
         "@angular/animations": "^17.2.4",
         "@angular/cdk": "^17.2.2",
         "@angular/common": "^17.2.4",
@@ -45,11 +46,11 @@
         "@clr/core": "^4.0.15",
         "@clr/icons": "^13.0.2",
         "@clr/ui": "^17.0.1",
+        "@graphql-typed-document-node/core": "^3.2.0",
         "@messageformat/core": "^3.2.0",
         "@ng-select/ng-select": "^12.0.7",
         "@ngx-translate/core": "^15.0.0",
         "@ngx-translate/http-loader": "^8.0.0",
-        "@vendure/common": "^2.3.1",
         "@webcomponents/custom-elements": "^1.6.0",
         "apollo-angular": "^6.0.0",
         "apollo-upload-client": "^18.0.1",
@@ -58,6 +59,7 @@
         "dayjs": "^1.11.10",
         "graphql": "~16.9.0",
         "just-extend": "^6.2.0",
+        "lodash": "^4.17.21",
         "messageformat": "2.3.0",
         "ngx-pagination": "^6.0.3",
         "ngx-translate-messageformat-compiler": "^6.5.0",
@@ -68,13 +70,16 @@
         "prosemirror-inputrules": "^1.4.0",
         "prosemirror-keymap": "^1.2.2",
         "prosemirror-menu": "^1.2.4",
+        "prosemirror-model": "^1.22.3",
         "prosemirror-schema-basic": "^1.2.2",
         "prosemirror-schema-list": "^1.3.0",
         "prosemirror-state": "^1.4.3",
         "prosemirror-tables": "^1.3.7",
+        "prosemirror-view": "^1.34.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "rxjs": "^7.8.1",
+        "sass": "^1.79.4",
         "tslib": "^2.6.2",
         "zone.js": "~0.14.4"
     },
