--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,7 +35,7 @@
     ],
     "dependencies": {
         "@clack/prompts": "^0.7.0",
-        "@vendure/common": "^2.3.1",
+        "@vendure/common": "workspace:*",
         "change-case": "^4.1.2",
         "commander": "^11.0.0",
         "dotenv": "^16.4.5",
@@ -46,7 +46,8 @@
         "tsconfig-paths": "^4.2.0"
     },
     "devDependencies": {
-        "@vendure/core": "^2.3.1",
-        "typescript": "5.3.3"
+        "@vendure/core": "workspace:*",
+        "typescript": "5.3.3",
+        "rimraf": "^5.0.5"
     }
 }
