--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,8 +40,12 @@
         "cli/**/*"
     ],
     "dependencies": {
+        "@vendure/core": "workspace:*",
+        "@vendure/common": "workspace:*",
         "@apollo/server": "^4.10.4",
+        "@apollographql/graphql-playground-html": "^1.6.29",
         "@graphql-tools/stitch": "^9.2.10",
+        "@graphql-tools/utils": "^10.5.4",
         "@nestjs/apollo": "~12.2.0",
         "@nestjs/common": "~10.3.10",
         "@nestjs/core": "~10.3.10",
@@ -51,7 +55,6 @@
         "@nestjs/testing": "~10.3.10",
         "@nestjs/typeorm": "~10.0.2",
         "@types/fs-extra": "^9.0.1",
-        "@vendure/common": "^2.3.1",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cookie-session": "^2.1.0",
@@ -73,6 +76,7 @@
         "mime-types": "^2.1.35",
         "ms": "^2.1.3",
         "nanoid": "^3.3.7",
+        "node-fetch": "^2.7.0",
         "picocolors": "^1.0.0",
         "progress": "^2.0.3",
         "reflect-metadata": "^0.2.2",
@@ -90,6 +94,7 @@
         "@types/mime-types": "^2.1.4",
         "@types/ms": "^0.7.34",
         "@types/node": "^18.19.23",
+        "@types/node-fetch": "^2.6.11",
         "@types/progress": "^2.0.7",
         "@types/prompts": "^2.4.9",
         "@types/semver": "^7.5.8",
