--- a/packages/elasticsearch-plugin/package.json
+++ b/packages/elasticsearch-plugin/package.json
@@ -26,8 +26,8 @@
         "fast-deep-equal": "^3.1.3"
     },
     "devDependencies": {
-        "@vendure/common": "^2.3.1",
-        "@vendure/core": "^2.3.1",
+        "@vendure/common": "workspace:*",
+        "@vendure/core": "workspace:*",
         "rimraf": "^5.0.5",
         "typescript": "5.3.3"
     }
