--- a/packages/harden-plugin/package.json
+++ b/packages/harden-plugin/package.json
@@ -18,10 +18,12 @@
         "access": "public"
     },
     "dependencies": {
+        "@apollo/server": "^4.10.4",
         "graphql-query-complexity": "^0.12.0"
     },
     "devDependencies": {
-        "@vendure/common": "^2.3.1",
-        "@vendure/core": "^2.3.1"
+        "@vendure/common": "workspace:*",
+        "@vendure/core": "workspace:*",
+        "rimraf": "^5.0.5"
     }
 }
