--- a/packages/job-queue-plugin/package.json
+++ b/packages/job-queue-plugin/package.json
@@ -23,11 +23,16 @@
     },
     "devDependencies": {
         "@google-cloud/pubsub": "^2.8.0",
-        "@vendure/common": "^2.3.1",
-        "@vendure/core": "^2.3.1",
+        "@vendure/common": "workspace:*",
+        "@vendure/core": "workspace:*",
         "bullmq": "^5.4.2",
         "ioredis": "^5.3.2",
         "rimraf": "^5.0.5",
         "typescript": "5.3.3"
+    },
+    "dependencies": {
+        "@nestjs/common": "~10.3.10",
+        "@nestjs/terminus": "~10.2.3",
+        "rxjs": "^7.8.1"
     }
 }
