--- a/packages/payments-plugin/package.json
+++ b/packages/payments-plugin/package.json
@@ -46,9 +46,9 @@
         "@mollie/api-client": "^3.7.0",
         "@types/braintree": "^3.3.11",
         "@types/localtunnel": "2.0.4",
-        "@vendure/common": "^2.3.1",
-        "@vendure/core": "^2.3.1",
-        "@vendure/testing": "^2.3.1",
+        "@vendure/common": "workspace:*",
+        "@vendure/core": "workspace:*",
+        "@vendure/testing": "workspace:*",
         "braintree": "^3.22.0",
         "localtunnel": "2.0.2",
         "nock": "^13.1.4",
