--- a/packages/stellate-plugin/package.json
+++ b/packages/stellate-plugin/package.json
@@ -21,7 +21,7 @@
         "node-fetch": "^2.7.0"
     },
     "devDependencies": {
-        "@vendure/common": "^2.3.1",
-        "@vendure/core": "^2.3.1"
+        "@vendure/common": "workspace:*",
+        "@vendure/core": "workspace:*"
     }
 }
