--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "codegen": "tsc -p scripts/codegen/plugins && ts-node scripts/codegen/generate-graphql-types.ts",
     "version": "npm run check-imports && npm run check-angular-versions && npm run build && npm run check-core-type-defs && npm run generate-changelog && git add CHANGELOG* && git add */version.ts",
     "dev-server:start": "cd packages/dev-server && pnpm start",
-    "build": "pnpm -r --filter='!@deenruv/cli' --filter='!@deenruv/admin-ui-plugin' --filter='!@deenruv/elasticsearch-plugin' --filter='!@deenruv/sentry-plugin' --filter='!@deenruv/stellate-plugin' --filter='!@deenruv/payments-plugin' --filter='!@deenruv/testing' run build",
+    "build": "pnpm -r run build",
     "check-imports": "ts-node scripts/check-imports.ts",
     "check-core-type-defs": "ts-node scripts/check-core-type-defs.ts",
     "check-angular-versions": "ts-node scripts/check-angular-versions.ts",
