--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,6 +38,7 @@
         "@deenruv/common": "workspace:*",
         "change-case": "^4.1.2",
         "commander": "^11.0.0",
+        "cross-spawn": "^7.0.3",
         "dotenv": "^16.4.5",
         "fs-extra": "^11.2.0",
         "picocolors": "^1.0.0",
@@ -47,7 +48,8 @@
     },
     "devDependencies": {
         "@deenruv/core": "workspace:*",
-        "typescript": "5.3.3",
-        "rimraf": "^5.0.5"
+        "@types/cross-spawn": "^6.0.6",
+        "rimraf": "^5.0.5",
+        "typescript": "5.3.3"
     }
 }
