--- a/packages/elasticsearch-plugin/package.json
+++ b/packages/elasticsearch-plugin/package.json
@@ -22,8 +22,15 @@
     },
     "dependencies": {
         "@elastic/elasticsearch": "~7.9.1",
+        "@nestjs/common": "~10.3.10",
+        "@nestjs/core": "~10.3.10",
+        "@nestjs/graphql": "~12.2.0",
+        "@nestjs/terminus": "~10.2.3",
         "deepmerge": "^4.2.2",
-        "fast-deep-equal": "^3.1.3"
+        "fast-deep-equal": "^3.1.3",
+        "graphql-tag": "^2.12.6",
+        "rxjs": "^7.8.1",
+        "typeorm": "0.3.20"
     },
     "devDependencies": {
         "@deenruv/common": "workspace:*",
