--- a/packages/payments-plugin/package.json
+++ b/packages/payments-plugin/package.json
@@ -29,7 +29,18 @@
         "stripe": "13.x"
     },
     "dependencies": {
-        "currency.js": "2.0.4"
+        "@deenruv/common": "workspace:*",
+        "@deenruv/core": "workspace:*",
+        "@deenruv/testing": "workspace:*",
+        "@nestjs/common": "~10.3.10",
+        "@nestjs/core": "~10.3.10",
+        "@nestjs/graphql": "~12.2.0",
+        "axios": "^1.7.7",
+        "body-parser": "^1.20.2",
+        "currency.js": "2.0.4",
+        "express": "^4.21.0",
+        "graphql": "~16.9.0",
+        "graphql-tag": "^2.12.6"
     },
     "peerDependenciesMeta": {
         "@mollie/api-client": {
@@ -44,11 +55,11 @@
     },
     "devDependencies": {
         "@mollie/api-client": "^3.7.0",
+        "@types/body-parser": "^1.19.5",
         "@types/braintree": "^3.3.11",
+        "@types/connect": "^3.4.38",
+        "@types/express": "^4.17.21",
         "@types/localtunnel": "2.0.4",
-        "@deenruv/common": "workspace:*",
-        "@deenruv/core": "workspace:*",
-        "@deenruv/testing": "workspace:*",
         "braintree": "^3.22.0",
         "localtunnel": "2.0.2",
         "nock": "^13.1.4",
