--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,6 +9,8 @@
         "run:server": "node -r ts-node/register -r dotenv/config index.ts",
         "run:worker": "node -r ts-node/register -r dotenv/config index-worker.ts",
         "start": "concurrently npm:run*",
+        "docker-up": "docker compose up -d",
+        "docker-down": "docker compose down -v",
         "load-test:1k": "node -r ts-node/register load-testing/run-load-test.ts 1000",
         "load-test:10k": "node -r ts-node/register load-testing/run-load-test.ts 10000",
         "load-test:100k": "node -r ts-node/register load-testing/run-load-test.ts 100000"
