--- a/package.json
+++ b/package.json
@@ -1,64 +1,66 @@
 {
-  "name": "deenruv",
-  "version": "0.0.0",
-  "private": true,
-  "engines": {
-    "node": ">= 18"
-  },
-  "scripts": {
-    "lint": "eslint --fix",
-    "format": "prettier --write --html-whitespace-sensitivity ignore",
-    "docs:generate-typescript-docs": "ts-node scripts/docs/generate-typescript-docs.ts",
-    "docs:generate-graphql-docs": "ts-node scripts/docs/generate-graphql-docs.ts --api=shop && ts-node scripts/docs/generate-graphql-docs.ts --api=admin",
-    "docs:build": "npm run docs:generate-typescript-docs && npm run docs:generate-graphql-docs",
-    "codegen": "tsc -p scripts/codegen/plugins && ts-node scripts/codegen/generate-graphql-types.ts",
-    "version": "npm run check-imports && npm run check-angular-versions && npm run build && npm run check-core-type-defs && npm run generate-changelog && git add CHANGELOG* && git add */version.ts",
-    "start": "pnpm -filter=@deenruv/server run start",
-    "build": "pnpm -r run build",
-    "check-imports": "ts-node scripts/check-imports.ts",
-    "check-core-type-defs": "ts-node scripts/check-core-type-defs.ts",
-    "check-angular-versions": "ts-node scripts/check-angular-versions.ts",
-    "generate-changelog": "ts-node scripts/changelogs/generate-changelog.ts"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^19.1.0",
-    "@commitlint/config-conventional": "^19.1.0",
-    "@graphql-codegen/add": "5.0.2",
-    "@graphql-codegen/cli": "5.0.2",
-    "@graphql-codegen/fragment-matcher": "5.0.2",
-    "@graphql-codegen/typed-document-node": "^5.0.6",
-    "@graphql-codegen/typescript": "4.0.9",
-    "@graphql-codegen/typescript-operations": "4.2.3",
-    "@graphql-tools/schema": "^10.0.4",
-    "@swc/core": "^1.4.6",
-    "@types/fs-extra": "^11.0.4",
-    "@types/klaw-sync": "^6.0.5",
-    "@types/node": "^20.11.19",
-    "concurrently": "^8.2.2",
-    "conventional-changelog-core": "^7.0.0",
-    "cross-env": "^7.0.3",
-    "find": "^0.3.0",
-    "fs-extra": "^11.2.0",
-    "graphql": "~16.9.0",
-    "husky": "^4.3.0",
-    "klaw-sync": "^6.0.0",
-    "lint-staged": "^10.5.4",
-    "prettier": "^3.2.5",
-    "rollup": "^4.18.0",
-    "tinybench": "^2.6.0",
-    "ts-node": "^10.9.2",
-    "typescript": "5.3.3",
-    "unplugin-swc": "^1.4.4",
-    "vitest": "^1.3.1"
-  },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^45.0.0",
-    "eslint-plugin-prefer-arrow": "^1.2.3"
-  },
-  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
+    "name": "deenruv",
+    "version": "0.0.0",
+    "private": true,
+    "engines": {
+        "node": ">= 18"
+    },
+    "scripts": {
+        "lint": "eslint --fix",
+        "format": "prettier --write --html-whitespace-sensitivity ignore",
+        "docs:generate-typescript-docs": "ts-node scripts/docs/generate-typescript-docs.ts",
+        "docs:generate-graphql-docs": "ts-node scripts/docs/generate-graphql-docs.ts --api=shop && ts-node scripts/docs/generate-graphql-docs.ts --api=admin",
+        "docs:build": "npm run docs:generate-typescript-docs && npm run docs:generate-graphql-docs",
+        "codegen": "tsc -p scripts/codegen/plugins && ts-node scripts/codegen/generate-graphql-types.ts",
+        "version": "npm run check-imports && npm run check-angular-versions && npm run build && npm run check-core-type-defs && npm run generate-changelog && git add CHANGELOG* && git add */version.ts",
+        "start": "pnpm -filter=@deenruv/server run start",
+        "server-docker-up": "pnpm -filter=@deenruv/server docker-up",
+        "server-docker-down": "pnpm -filter=@deenruv/server docker-down",
+        "build": "pnpm -r run build",
+        "check-imports": "ts-node scripts/check-imports.ts",
+        "check-core-type-defs": "ts-node scripts/check-core-type-defs.ts",
+        "check-angular-versions": "ts-node scripts/check-angular-versions.ts",
+        "generate-changelog": "ts-node scripts/changelogs/generate-changelog.ts"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^19.1.0",
+        "@commitlint/config-conventional": "^19.1.0",
+        "@graphql-codegen/add": "5.0.2",
+        "@graphql-codegen/cli": "5.0.2",
+        "@graphql-codegen/fragment-matcher": "5.0.2",
+        "@graphql-codegen/typed-document-node": "^5.0.6",
+        "@graphql-codegen/typescript": "4.0.9",
+        "@graphql-codegen/typescript-operations": "4.2.3",
+        "@graphql-tools/schema": "^10.0.4",
+        "@swc/core": "^1.4.6",
+        "@types/fs-extra": "^11.0.4",
+        "@types/klaw-sync": "^6.0.5",
+        "@types/node": "^20.11.19",
+        "concurrently": "^8.2.2",
+        "conventional-changelog-core": "^7.0.0",
+        "cross-env": "^7.0.3",
+        "find": "^0.3.0",
+        "fs-extra": "^11.2.0",
+        "graphql": "~16.9.0",
+        "husky": "^4.3.0",
+        "klaw-sync": "^6.0.0",
+        "lint-staged": "^10.5.4",
+        "prettier": "^3.2.5",
+        "rollup": "^4.18.0",
+        "tinybench": "^2.6.0",
+        "ts-node": "^10.9.2",
+        "typescript": "5.3.3",
+        "unplugin-swc": "^1.4.4",
+        "vitest": "^1.3.1"
+    },
+    "dependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.54.1",
+        "@typescript-eslint/parser": "^5.54.1",
+        "eslint": "^8.41.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsdoc": "^45.0.0",
+        "eslint-plugin-prefer-arrow": "^1.2.3"
+    },
+    "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
 }
