ft: plans with UI, need to do configs and maybe some fancy watcher for packages?

--- a/apps/admin-ui/package.json
+++ b/apps/admin-ui/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@aexol-studio/hooks": "^0.2.16",
     "@hookform/resolvers": "^3.3.4",
+    "@deenruv/react-ui-devkit": "workspace:*",
+    "@deenruv/deenruv-first-plugin": "workspace:*",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
