--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
         "version": "npm run check-imports && npm run check-angular-versions && npm run build && npm run check-core-type-defs && npm run generate-changelog && git add CHANGELOG* && git add */version.ts",
         "start:server": "pnpm -filter=@deenruv/server run start",
         "start:admin-ui": "pnpm -filter=@deenruv/new-admin-ui run dev",
+        "start": "concurrently -n server,admin-ui -c green,blue \"pnpm -filter=@deenruv/server run start\" \"pnpm -filter=@deenruv/new-admin-ui run dev\"",
         "server-docker-up": "pnpm -filter=@deenruv/server docker-up",
         "server-docker-down": "pnpm -filter=@deenruv/server docker-down",
-        "build": "pnpm -r run build",
+        "build": "pnpm -r -filter='!@deenruv/admin-ui' run build",
+        "watch:plugin:deenruv-first-plugin": "pnpm -filter=@deenruv/deenruv-first-plugin run watch",
+        "watch:package:react-ui-devkit": "pnpm -filter=@deenruv/react-ui-devkit run watch",
+        "watch": "concurrently -n plugin,package -c green,blue \"pnpm -filter=@deenruv/deenruv-first-plugin run watch\" \"pnpm -filter=@deenruv/react-ui-devkit run watch\"",
         "check-imports": "ts-node scripts/check-imports.ts",
         "check-core-type-defs": "ts-node scripts/check-core-type-defs.ts",
         "check-angular-versions": "ts-node scripts/check-angular-versions.ts",
