--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
         "ui-devkit",
         "repo"
     ],
-    "conventionalCommits.gitmoji": false
+    "conventionalCommits.gitmoji": false,
+    "cSpell.words": ["Deenruv"]
 }
