--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -4,12 +4,8 @@
         "sourceMap": true,
         "jsx": "react",
         "paths": {
-            "@deenruv/admin-ui/*": [
-                "../admin-ui/package/*"
-            ]
+            "@deenruv/admin-ui/*": ["../admin-ui/package/*"]
         }
     },
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": ["node_modules"]
 }
