fixed ui-devkit and first-plugin builds

--- a/packages/react-ui-devkit/tsconfig.json
+++ b/packages/react-ui-devkit/tsconfig.json
@@ -3,8 +3,8 @@
         "sourceMap": true,
         "jsx": "react",
         "target": "ESNext",
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
+        "module": "CommonJS",
+        "moduleResolution": "Node",
         "experimentalDecorators": true,
         "skipLibCheck": true,
         "declaration": true,
