--- a/plugins/deenruv-first-plugin/tsconfig.json
+++ b/plugins/deenruv-first-plugin/tsconfig.json
@@ -1,11 +1,10 @@
 {
     "compilerOptions": {
-        "baseUrl": "./",
         "jsx": "react",
         "allowSyntheticDefaultImports": true,
         "importHelpers": true,
         "removeComments": false,
-        "outDir": "./lib",
+        "outDir": "./dist",
         "sourceMap": true,
         "declaration": true,
         "moduleResolution": "node",
