--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
         "ts-node": "^10.9.2",
         "typescript": "5.3.3",
         "unplugin-swc": "^1.4.4",
-        "vitest": "^1.3.1"
+        "vitest": "^1.3.1",
+        "typescript-eslint": "^8.0.0-alpha.34"
     },
     "dependencies": {
         "@typescript-eslint/eslint-plugin": "^5.54.1",
