--- a/packages/react-ui-devkit/package.json
+++ b/packages/react-ui-devkit/package.json
@@ -16,9 +16,10 @@
         "url": "git+https://github.com/deenruv-ecommerce/deenruv.git"
     },
     "scripts": {
-        "build": "tsc --build",
-        "watch": "tsc --watch",
-        "lint": "eslint --fix ."
+        "build": "rimraf dist && tspc --build",
+        "watch": "tspc --watch",
+        "lint": "eslint --fix .",
+        "zeus": "zeus http://localhost:3000/admin-api ./src/"
     },
     "bugs": {
         "url": "https://github.com/deenruv-ecommerce/deenruv/issues"
@@ -61,6 +62,7 @@
         "cmdk": "^1.0.0",
         "date-fns": "^3.6.0",
         "framer-motion": "^11.1.7",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.363.0",
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
@@ -80,12 +82,15 @@
         "vaul": "^0.9.1"
     },
     "devDependencies": {
+        "@types/lodash": "^4.17.10",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
+        "graphql-zeus": "^5.4.2",
         "rimraf": "^5.0.5",
         "rollup": "^4.13.0",
         "rollup-plugin-typescript2": "^0.36.0",
         "tslib": "^2.6.2",
+        "ttypescript": "^1.5.13",
         "typescript": "5.3.3"
     }
 }
