--- a/plugins/deenruv-first-plugin/tsconfig.json
+++ b/plugins/deenruv-first-plugin/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "jsx": "react",
         "allowSyntheticDefaultImports": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
         "importHelpers": true,
         "removeComments": false,
         "outDir": "./dist",
@@ -11,10 +13,10 @@
         "strict": true,
         "noImplicitAny": true,
         "strictPropertyInitialization": false,
-        "target": "es5",
-        "module": "esnext",
+        "target": "ESNext",
+        "module": "ESNext",
         "lib": ["es2017", "dom", "esnext.asynciterable"]
     },
     "include": ["src/**/*.ts", "src/*.ts"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "src/zeus/**/*"]
 }
