--- a/packages/react-ui-devkit/package.json
+++ b/packages/react-ui-devkit/package.json
@@ -72,7 +72,6 @@
         "react-day-picker": "^8.10.1",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.3",
-        "react-router-dom": "^6.22.1",
         "recharts": "^2.12.7",
         "sonner": "^1.4.41",
         "tailwind-merge": "^2.2.2",
@@ -89,8 +88,8 @@
         "rimraf": "^5.0.5",
         "rollup": "^4.13.0",
         "rollup-plugin-typescript2": "^0.36.0",
+        "ts-patch": "^3.2.1",
         "tslib": "^2.6.2",
-        "ttypescript": "^1.5.13",
         "typescript": "5.3.3"
     }
 }
