--- a/plugins/deenruv-first-plugin/package.json
+++ b/plugins/deenruv-first-plugin/package.json
@@ -27,8 +27,10 @@
         "@deenruv/common": "workspace:*",
         "@deenruv/core": "workspace:*",
         "@deenruv/react-ui-devkit": "workspace:*",
+        "@deenruv/new-admin-ui": "workspace:*",
         "@nestjs/common": "~10.3.10",
         "@nestjs/graphql": "~12.2.0",
+        "@nestjs/serve-static": "^4.0.2",
         "date-fns": "^4.1.0",
         "graphql": "~16.9.0",
         "graphql-tag": "^2.12.6",
