--- a/apps/admin-ui/package.json
+++ b/apps/admin-ui/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "main": "dist/assets/index.js",
+  "style": "dist/assets/index.css",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -16,9 +18,13 @@
   },
   "dependencies": {
     "@aexol-studio/hooks": "^0.2.16",
-    "@hookform/resolvers": "^3.3.4",
-    "@deenruv/react-ui-devkit": "workspace:*",
     "@deenruv/deenruv-first-plugin": "workspace:*",
+    "@deenruv/react-ui-devkit": "workspace:*",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -51,8 +57,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "compression": "^1.7.4",
     "country-flag-icons": "^1.5.11",
     "date-fns": "^3.6.0",
+    "express": "^4.19.2",
     "framer-motion": "^11.1.7",
     "graphql-js-tree": "^1.0.9",
     "i18next": "^23.10.0",
@@ -70,6 +78,7 @@
     "react-resizable-panels": "^2.0.17",
     "react-router-dom": "^6.22.1",
     "recharts": "^2.12.7",
+    "sirv": "^2.0.4",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
     "sort-by": "^1.2.0",
@@ -86,6 +95,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.55",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.19",
@@ -107,6 +117,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vite-plugin-eslint": "^1.8.1",
