translations system + 2nd plugin for tests

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
         "server-docker-down": "pnpm -filter=@deenruv/server docker-down",
         "build": "pnpm -r -filter='!@deenruv/admin-ui' run build",
         "watch:plugin:deenruv-first-plugin": "pnpm -filter=@deenruv/deenruv-first-plugin run watch",
+        "watch:plugin:deenruv-second-plugin": "pnpm -filter=@deenruv/deenruv-second-plugin run watch",
         "watch:package:react-ui-devkit": "pnpm -filter=@deenruv/react-ui-devkit run watch",
-        "watch": "concurrently -n plugin,package -c green,blue \"pnpm -filter=@deenruv/deenruv-first-plugin run watch\" \"pnpm -filter=@deenruv/react-ui-devkit run watch\"",
+        "watch": "concurrently -n plugin,plugin-2,package -c green,blue,yellow \"pnpm -filter=@deenruv/deenruv-first-plugin run watch\" \"pnpm -filter=@deenruv/deenruv-second-plugin run watch\" \"pnpm -filter=@deenruv/react-ui-devkit run watch\"",
         "check-imports": "ts-node scripts/check-imports.ts",
         "check-core-type-defs": "ts-node scripts/check-core-type-defs.ts",
         "check-angular-versions": "ts-node scripts/check-angular-versions.ts",
