--- a/plugins/deenruv-second-plugin/package.json
+++ b/plugins/deenruv-second-plugin/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@deenruv/deenruv-first-plugin",
+    "name": "@deenruv/deenruv-second-plugin",
     "version": "0.0.1",
     "homepage": "https://www.deenruv.io/",
     "license": "MIT",
@@ -7,7 +7,6 @@
         "access": "public"
     },
     "exports": {
-        "./plugin-server": "./dist/plugin-server/index.js",
         "./plugin-ui": "./dist/plugin-ui/index.js"
     },
     "repository": {
@@ -15,7 +14,7 @@
         "url": "git+https://github.com/deenruv-ecommerce/deenruv.git"
     },
     "scripts": {
-        "build": "tsc --build",
+        "build": "rimraf dist && tsc --build",
         "watch": "tsc --watch",
         "lint": "eslint --fix .",
         "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server && zeus http://localhost:3000/admin-api ./src/plugin-ui"
@@ -27,10 +26,8 @@
         "@deenruv/common": "workspace:*",
         "@deenruv/core": "workspace:*",
         "@deenruv/react-ui-devkit": "workspace:*",
-        "@deenruv/new-admin-ui": "workspace:*",
         "@nestjs/common": "~10.3.10",
         "@nestjs/graphql": "~12.2.0",
-        "@nestjs/serve-static": "^4.0.2",
         "date-fns": "^4.1.0",
         "graphql": "~16.9.0",
         "graphql-tag": "^2.12.6",
