--- a/plugins/deenruv-first-plugin/package.json
+++ b/plugins/deenruv-first-plugin/package.json
@@ -15,7 +15,7 @@
         "url": "git+https://github.com/deenruv-ecommerce/deenruv.git"
     },
     "scripts": {
-        "build": "tsc --build",
+        "build": "rimraf dist && tsc --build",
         "watch": "tsc --watch",
         "lint": "eslint --fix .",
         "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server && zeus http://localhost:3000/admin-api ./src/plugin-ui"
@@ -27,16 +27,17 @@
         "@deenruv/common": "workspace:*",
         "@deenruv/core": "workspace:*",
         "@deenruv/react-ui-devkit": "workspace:*",
-        "@deenruv/new-admin-ui": "workspace:*",
         "@nestjs/common": "~10.3.10",
         "@nestjs/graphql": "~12.2.0",
-        "@nestjs/serve-static": "^4.0.2",
         "date-fns": "^4.1.0",
         "graphql": "~16.9.0",
         "graphql-tag": "^2.12.6",
         "graphql-zeus": "^5.4.2",
         "lucide-react": "^0.363.0",
-        "react-i18next": "^14.0.5"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-i18next": "^14.0.5",
+        "recharts": "^2.12.7"
     },
     "devDependencies": {
         "@types/react": "^18.3.11",
