--- a/plugins/deenruv-second-plugin/package.json
+++ b/plugins/deenruv-second-plugin/package.json
@@ -33,6 +33,8 @@
         "graphql-tag": "^2.12.6",
         "graphql-zeus": "^5.4.2",
         "lucide-react": "^0.363.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-i18next": "^14.0.5"
     },
     "devDependencies": {
