--- a/packages/react-ui-devkit/package.json
+++ b/packages/react-ui-devkit/package.json
@@ -18,8 +18,7 @@
     "scripts": {
         "build": "rimraf dist && tspc --build",
         "watch": "tspc --watch",
-        "lint": "eslint --fix .",
-        "zeus": "zeus http://localhost:3000/admin-api ./src/"
+        "lint": "eslint --fix ."
     },
     "bugs": {
         "url": "https://github.com/deenruv-ecommerce/deenruv/issues"
