--- a/plugins/deenruv-first-plugin/package.json
+++ b/plugins/deenruv-first-plugin/package.json
@@ -40,7 +40,8 @@
         "recharts": "^2.12.7"
     },
     "devDependencies": {
-        "@types/react": "^18.3.11",
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.0",
         "rimraf": "^5.0.10",
         "tslib": "^2.6.2",
         "typescript": "5.3.3"
