--- a/packages/react-ui-devkit/package.json
+++ b/packages/react-ui-devkit/package.json
@@ -75,6 +75,7 @@
         "react-day-picker": "^8.10.1",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.3",
+        "react-router-dom": "^6.22.1",
         "recharts": "^2.12.7",
         "sonner": "^1.4.41",
         "tailwind-merge": "^2.2.2",
