--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,8 +6,8 @@
     "private": true,
     "scripts": {
         "populate": "tsx populate-dev-server.ts",
-        "run:server": "tsx index.ts",
-        "run:worker": "tsx index-worker.ts",
+        "run:server": "APP_ENV=LOCAL tsx index.ts",
+        "run:worker": "APP_ENV=LOCAL tsx index-worker.ts",
         "start": "concurrently npm:run*",
         "docker-up": "docker compose up -d",
         "docker-down": "docker compose down -v",
