--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "deenruv",
     "version": "0.0.0",
+    "type": "module",
     "private": true,
     "engines": {
         "node": ">= 18"
