fix: small corrects

--- a/packages/admin-types/package.json
+++ b/packages/admin-types/package.json
@@ -6,8 +6,8 @@
     "publishConfig": {
         "access": "public"
     },
-    "main": "./lib/index.js",
-    "types": "./lib/index.d.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/deenruv-ecommerce/deenruv.git"
