--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "watch:plugin:deenruv-first-plugin": "pnpm -filter=@deenruv/deenruv-first-plugin run watch",
         "watch:plugin:deenruv-second-plugin": "pnpm -filter=@deenruv/deenruv-second-plugin run watch",
         "watch:package:react-ui-devkit": "pnpm -filter=@deenruv/react-ui-devkit run watch",
-        "watch": "concurrently -n plugin,plugin-2,package -c green,blue,yellow \"pnpm -filter=@deenruv/deenruv-first-plugin run watch\" \"pnpm -filter=@deenruv/deenruv-second-plugin run watch\" \"pnpm -filter=@deenruv/react-ui-devkit run watch\"",
+        "watch": "concurrently -n plugin,plugin-2,package,admin-panel -c green,blue,yellow,red \"pnpm -filter=@deenruv/deenruv-first-plugin run watch\" \"pnpm -filter=@deenruv/deenruv-second-plugin run watch\" \"pnpm -filter=@deenruv/react-ui-devkit run watch\" \"pnpm -filter=@deenruv/admin-dashboard run watch\"",
         "check-imports": "ts-node scripts/check-imports.ts",
         "check-core-type-defs": "ts-node scripts/check-core-type-defs.ts",
         "check-angular-versions": "ts-node scripts/check-angular-versions.ts",
