--- a/packages/admin-types/package.json
+++ b/packages/admin-types/package.json
@@ -7,7 +7,7 @@
     "types": "./dist/index.d.ts",
     "scripts": {
         "zeus": "zeus http://localhost:3000/admin-api ./src --n --ts --typedDocumentNode",
-        "build": "rimraf dist && rimraf tsconfig.tsbuildinfo && tsc --build",
+        "build": "rimraf dist && tsc --build",
         "watch": "tsc --watch"
     },
     "devDependencies": {
