ft: some branding stuff

--- a/packages/admin-dashboard/package.json
+++ b/packages/admin-dashboard/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "watch": "tspc --watch",
     "build": "tspc --build && npm run copy-types",
-    "copy-types": "cp src/type.d.ts dist/index.d.ts",
+    "copy-types": "cp src/root.d.ts dist/index.d.ts",
     "check-types": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "zeus:local": "zeus http://localhost:3000/admin-api ./src/",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
