--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
         "start:server": "pnpm -filter=@deenruv/server run start",
         "start:admin-ui": "pnpm -filter=@deenruv/panel run dev",
         "start": "concurrently -n server,admin-ui -c green,blue \"pnpm -filter=@deenruv/server run start\" \"pnpm -filter=@deenruv/panel run dev\"",
-        "server-docker-up": "pnpm -filter=@deenruv/server docker-up && pnpm -filter=@deenruv/server populate",
+        "server-docker-up": "pnpm -filter=@deenruv/server docker-up",
         "server-docker-down": "pnpm -filter=@deenruv/server docker-down",
+        "server-populate": "pnpm -filter=@deenruv/server populate",
         "build": "pnpm -r run build",
         "build:dev": "pnpm -r -filter='!@deenruv/admin-ui' -filter='!@deenruv/admin-ui-plugin' -filter='!@deenruv/panel' run build",
         "watch:plugin:deenruv-first-plugin": "pnpm -filter=@deenruv/deenruv-first-plugin run watch",
         "watch:plugin:deenruv-second-plugin": "pnpm -filter=@deenruv/deenruv-second-plugin run watch",
         "watch:package:react-ui-devkit": "pnpm -filter=@deenruv/react-ui-devkit run watch",
-        "watch": "concurrently -n plugin,plugin-2,package,admin-panel -c green,blue,yellow,red \"pnpm -filter=@deenruv/deenruv-first-plugin run watch\" \"pnpm -filter=@deenruv/deenruv-second-plugin run watch\" \"pnpm -filter=@deenruv/react-ui-devkit run watch\" \"pnpm -filter=@deenruv/admin-dashboard run watch\"",
+        "watch": "concurrently -n package,admin-panel -c yellow,red \"pnpm -filter=@deenruv/react-ui-devkit run watch\" \"pnpm -filter=@deenruv/admin-dashboard run watch\"",
         "check-imports": "ts-node scripts/check-imports.ts",
         "check-core-type-defs": "ts-node scripts/check-core-type-defs.ts",
         "check-angular-versions": "ts-node scripts/check-angular-versions.ts",
