--- a/plugins/deenruv-first-plugin/package.json
+++ b/plugins/deenruv-first-plugin/package.json
@@ -6,6 +6,9 @@
     "publishConfig": {
         "access": "public"
     },
+    "files": [
+        "dist/**/*"
+    ],
     "exports": {
         "./plugin-server": "./dist/plugin-server/index.js",
         "./plugin-ui": "./dist/plugin-ui/index.js"
