--- a/packages/admin-dashboard/package.json
+++ b/packages/admin-dashboard/package.json
@@ -4,6 +4,9 @@
   "main": "dist/index.js",
   "style": "dist/index.css",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "watch": "tspc --watch",
     "build": "tspc --build && npm run copy-types",
