--- a/plugins/deenruv-second-plugin/package.json
+++ b/plugins/deenruv-second-plugin/package.json
@@ -9,6 +9,9 @@
     "exports": {
         "./plugin-ui": "./dist/plugin-ui/index.js"
     },
+    "files": [
+        "dist/**/*"
+    ],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/deenruv-ecommerce/deenruv.git"
