--- a/packages/react-ui-devkit/package.json
+++ b/packages/react-ui-devkit/package.json
@@ -24,9 +24,9 @@
         "url": "https://github.com/deenruv-ecommerce/deenruv/issues"
     },
     "dependencies": {
+        "@deenruv/admin-types": "workspace:*",
         "@deenruv/admin-ui": "workspace:*",
         "@deenruv/common": "workspace:*",
-        "@deenruv/admin-types": "workspace:*",
         "@deenruv/core": "workspace:*",
         "@dnd-kit/core": "^6.1.0",
         "@dnd-kit/modifiers": "^7.0.0",
@@ -53,7 +53,7 @@
         "@radix-ui/react-toggle": "^1.1.0",
         "@radix-ui/react-toggle-group": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.0.7",
-        "@tanstack/react-table": "^8.15.3",
+        "@tanstack/react-table": "^8.20.5",
         "@tiptap/extension-document": "^2.8.0",
         "@tiptap/extension-heading": "^2.8.0",
         "@tiptap/extension-paragraph": "^2.8.0",
@@ -76,6 +76,7 @@
         "react-day-picker": "^8.10.1",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.3",
+        "react-i18next": "^14.0.5",
         "react-router-dom": "^6.22.1",
         "recharts": "^2.12.7",
         "sonner": "^1.4.41",
@@ -84,8 +85,7 @@
         "tailwindcss-animate": "^1.0.7",
         "typescript-transform-paths": "^3.5.1",
         "vaul": "^0.9.1",
-        "zustand": "^4.5.2",
-        "react-i18next": "^14.0.5"
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@types/lodash": "^4.17.10",
