--- a/packages/react-ui-devkit/package.json
+++ b/packages/react-ui-devkit/package.json
@@ -61,6 +61,7 @@
         "@tiptap/pm": "^2.7.2",
         "@tiptap/react": "^2.7.2",
         "@tiptap/starter-kit": "^2.7.2",
+        "@types/lodash": "^4.17.13",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "cmdk": "^1.0.0",
