--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,11 +1,18 @@
 {
-    "extends": "../../tsconfig",
     "compilerOptions": {
-        "sourceMap": true,
-        "jsx": "react",
-        "paths": {
-            "@deenruv/admin-ui/*": ["../admin-ui/package/*"]
-        }
+        "module": "commonjs",
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "strictPropertyInitialization": false,
+        "target": "es2019",
+        "strict": true,
+        "sourceMap": false,
+        "skipLibCheck": true,
+        "outDir": "./dist",
+        "baseUrl": "./"
     },
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "admin_ui", "dist", "static"],
+    "ts-node": { "files": true }
 }
