--- a/apps/panel/package.json
+++ b/apps/panel/package.json
@@ -16,13 +16,14 @@
     "interface": "i18next-resources-for-ts interface -i ./src/locales/en -o ./src/@types/resources.d.ts"
   },
   "dependencies": {
-    "@aexol-studio/hooks": "^0.2.16",
     "@deenruv/content-management-plugin": "workspace:*",
     "@deenruv/admin-dashboard": "workspace:*",
+    "@deenruv/product-badges-plugin": "workspace:*",
     "@deenruv/deenruv-examples-plugin": "workspace:*",
     "@deenruv/deenruv-second-plugin": "workspace:*",
     "@deenruv/react-ui-devkit": "workspace:*",
     "@deenruv/admin-types": "workspace:*",
+    "@aexol-studio/hooks": "^0.2.16",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
