--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "start:server": "pnpm -filter=@deenruv/server run start",
         "start:admin-ui": "pnpm -filter=@deenruv/panel run dev",
         "start": "concurrently -n server,admin-ui -c green,blue \"pnpm -filter=@deenruv/server run start\" \"pnpm -filter=@deenruv/panel run dev\"",
-        "server-docker-up": "pnpm -filter=@deenruv/server docker-up",
-        "server-docker-down": "pnpm -filter=@deenruv/server docker-down",
+        "server-docker-up": "docker compose up -d",
+        "server-docker-down": "docker compose down -v",
         "server-populate": "pnpm -filter=@deenruv/server populate",
         "build": "pnpm -r run build",
         "build:dev": "pnpm -r -filter='!@deenruv/admin-ui' -filter='!@deenruv/admin-ui-plugin' -filter='!@deenruv/panel' run build",
