--- a/plugins/deenruv-examples-plugin/package.json
+++ b/plugins/deenruv-examples-plugin/package.json
@@ -1,52 +1,44 @@
 {
     "name": "@deenruv/deenruv-examples-plugin",
-    "version": "0.0.20",
-    "homepage": "https://www.deenruv.io/",
+    "version": "1.0.0",
+    "homepage": "https://www.deenruv.com/",
     "license": "MIT",
-    "publishConfig": {
-        "access": "public"
-    },
     "files": [
         "dist/**/*"
     ],
+    "main": "./dist/plugin-server/index.js",
     "exports": {
+        ".": "./dist/plugin-server/index.js",
         "./plugin-server": "./dist/plugin-server/index.js",
         "./plugin-ui": "./dist/plugin-ui/index.js"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/deenruv-ecommerce/deenruv.git"
-    },
     "scripts": {
         "build": "rimraf dist && tsc --build",
-        "watch": "tsc --watch",
+        "watch": "tsc --build --watch",
         "lint": "eslint --fix .",
         "zeus": "zeus http://localhost:3000/admin-api ./src/plugin-server && zeus http://localhost:3000/admin-api ./src/plugin-ui"
     },
-    "bugs": {
-        "url": "https://github.com/deenruv-ecommerce/deenruv/issues"
-    },
     "dependencies": {
+        "graphql-tag": "^2.12.6",
+        "react": "^18.2.0"
+    },
+    "devDependencies": {
         "@deenruv/common": "workspace:*",
         "@deenruv/core": "workspace:*",
         "@deenruv/react-ui-devkit": "workspace:*",
-        "@nestjs/common": "~10.3.10",
-        "@nestjs/graphql": "~12.2.0",
-        "date-fns": "^4.1.0",
-        "graphql": "~16.9.0",
-        "graphql-tag": "^2.12.6",
-        "graphql-zeus": "^5.4.2",
-        "lucide-react": "^0.363.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "react-i18next": "^14.0.5",
-        "recharts": "^2.12.7"
-    },
-    "devDependencies": {
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.1",
         "rimraf": "^5.0.10",
-        "tslib": "^2.6.2",
-        "typescript": "5.3.3"
+        "typescript": "5.3.3",
+        "graphql-zeus": "^7.0.0",
+        "date-fns": "^3.6.0",
+        "lucide-react": "^0.363.0",
+        "sonner": "^1.4.41",
+        "@nestjs/common": "~10.3.10",
+        "@nestjs/graphql": "~12.2.0",
+        "typeorm": "0.3.20",
+        "recharts": "^2.12.7"
     }
 }
