--- a/plugins/deenruv-examples-plugin/tsconfig.json
+++ b/plugins/deenruv-examples-plugin/tsconfig.json
@@ -1,24 +1,9 @@
 {
     "compilerOptions": {
-        "jsx": "react",
-        "allowSyntheticDefaultImports": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "importHelpers": true,
-        "removeComments": false,
-        "outDir": "./dist",
-        "rootDir": "./src",
+        "composite": true,
         "declaration": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "strict": true,
-        "noImplicitAny": true,
-        "strictPropertyInitialization": false,
-        "target": "ESNext",
-        "module": "ESNext",
-        "skipLibCheck": true,
-        "lib": ["es2017", "dom", "esnext.asynciterable"]
+        "declarationMap": true
     },
-    "include": ["src/**/*.ts", "src/*.ts", "src/**/*.tsx", "src/*.tsx"],
-    "exclude": ["node_modules", "src/zeus/**/*"]
+    "references": [{ "path": "./src/plugin-server" }, { "path": "src/plugin-ui" }],
+    "files": []
 }
