--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,11 +27,12 @@
         "@deenruv/core": "workspace:*",
         "@deenruv/content-management-plugin": "workspace:*",
         "@deenruv/deenruv-examples-plugin": "workspace:*",
+        "@deenruv/seo-plugin": "workspace:*",
+        "@deenruv/dashboard-widgets-plugin": "workspace:*",
         "@deenruv/product-badges-plugin": "workspace:*",
         "@deenruv/minko-core-plugin": "workspace:*",
         "@deenruv/elasticsearch-plugin": "workspace:*",
         "@deenruv/email-plugin": "workspace:*",
-        "@deenruv/seo-plugin": "workspace:*",
         "@deenruv/job-queue-plugin": "workspace:*",
         "@nestjs/axios": "^3.0.2",
         "@nestjs/common": "~10.3.10",
