--- a/plugins/minko-core-plugin/tsconfig.json
+++ b/plugins/minko-core-plugin/tsconfig.json
@@ -1,26 +1,9 @@
 {
     "compilerOptions": {
-        "jsx": "react",
-        "allowSyntheticDefaultImports": true,
-        "emitDecoratorMetadata": true,
-        "esModuleInterop": true,
-        "experimentalDecorators": true,
-        "importHelpers": true,
-        "removeComments": false,
-        "rootDir": "./src",
-        "outDir": "./dist",
-        "baseUrl": "./",
-        "sourceMap": true,
+        "composite": true,
         "declaration": true,
-        "skipLibCheck": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "strict": true,
-        "strictPropertyInitialization": false,
-        "target": "ESNext",
-        "module": "ESNext",
-        "lib": ["es2017", "dom", "esnext.asynciterable"]
+        "declarationMap": true
     },
-    "include": ["src/**/*.ts", "src/*.ts"],
-    "exclude": ["node_modules", "*/zeus/**/*"]
+    "references": [{ "path": "./src/plugin-server" }, { "path": "src/plugin-ui" }],
+    "files": []
 }
