ft: zeus client

--- a/packages/react-ui-devkit/package.json
+++ b/packages/react-ui-devkit/package.json
@@ -32,6 +32,7 @@
         "@dnd-kit/modifiers": "^7.0.0",
         "@dnd-kit/sortable": "^8.0.0",
         "@dnd-kit/utilities": "^3.2.2",
+        "@graphql-typed-document-node/core": "^3.2.0",
         "@radix-ui/react-accordion": "^1.1.2",
         "@radix-ui/react-alert-dialog": "^1.0.5",
         "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -67,6 +68,7 @@
         "cmdk": "^1.0.0",
         "date-fns": "^3.6.0",
         "framer-motion": "^11.1.7",
+        "graphql": "~16.9.0",
         "lucide-react": "^0.363.0",
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
