--- a/packages/admin-types/package.json
+++ b/packages/admin-types/package.json
@@ -15,5 +15,9 @@
     },
     "devDependencies": {
         "rimraf": "^6.0.1"
+    },
+    "dependencies": {
+        "@graphql-typed-document-node/core": "^3.2.0",
+        "graphql-tag": "^2.12.6"
     }
 }
